--- a/src/styles/_config.scss
+++ b/src/styles/_config.scss
@@ -36,7 +36,7 @@ $logo-font-family: 'Baumans';
 
 // layout
 $app-bar-height: 60px;
-$app-bar-margin: 2.5rem;
+$app-bar-margin: 5%;
 
 // responsive layout
 $small: 300px;
